--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 //abstracs
 @use './abstracts/variables';
-@use './abstracts/_mixins.scss';
+@use './abstracts/mixins';
 
 //base
 @use './base/_base.scss';
