--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,13 +1,13 @@
 .footer {
-    background-color: var(--black-color);
+    background: linear-gradient(45deg, #e9e9e9, #a3a3a3ce);
     color: #fff;
     padding: 10px;
     bottom: 0;
     width: 100%;
-    font-size: 9px;
+    font-size: 12px;
     // height: 80px;
     & p{
-        color: #fff;
+        color: var(--secundary-color)
     }
 }
 
@@ -30,11 +30,11 @@ ul li {
     margin-bottom: 5px;
 }
 a {
-    color: #fff;
+    color: var(--secundary-color);
     text-decoration: none;
 }
 p {
-    font-size: 9px;
+    font-size: 10px;
     margin-bottom: 5px;
 }
 }
@@ -43,11 +43,11 @@ p {
     align-items: end;
 }
 .footer-section1{
-    font-size: 9px;
+    font-size: 10px;
 }
 .footer-section2{
-    color: #fff;
-    font-size: 8px;
+    color: var(--secundary-color);
+    font-size: 10px;
     align-items: center;
     display: flex;
     flex-direction: column;
