--- a/src/styles/components/_navBar.scss
+++ b/src/styles/components/_navBar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: var(--black-color);
+    background: linear-gradient(45deg, #e9e9e9, #a3a3a3bd);
     width: 100%;
     display: flex;
     box-shadow: 2px 2px 2px 0px rgba(186,171,186,1);
@@ -7,15 +7,17 @@
     flex-direction: row;
     align-content: center;
     align-items: center;
+    z-index: 1;
     justify-content: space-between;
     @media (max-width: 500px) {
       flex-direction: column;
+
     }
   }
   .divLogo{
     display: flex;
     flex-direction: row;
-    width: 20%;
+    width: 15%;
     padding-top: 1%;
     padding-bottom: 1%;
     padding-left: 2%;
@@ -35,7 +37,7 @@
   .navbar-list {
     font-family: var(--font-robotoFlex);
     width: 80%;
-    color: #fff;
+    color:  var(--secundary-color);
     list-style: none;
     padding: 0;
     margin: 0;
@@ -61,28 +63,33 @@
         .navbar-item { 
           display: inline-block;
           margin-right: 10px;
-          color: #fff;
+          color:  var(--secundary-color);
           
         }
         
         .navbar-item a:hover {
-          background-color: red;
+          background-color:  var(--secundary-color);
   }
   .route{
-    color: #fff;
+    color:  var(--secundary-color);
     font-size: 1.3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     &:hover {
-      color: var(--primary-color);
-      text-shadow: 0.5px 0.5px 1px var(--primary-color);
+      color: var(--blueSoft-color);
+      // text-shadow: 0.5px 0.5px 0.5px var(--blueSoft-color);
       cursor: pointer;
   }
   }
   .userName{
-    color: #fff;
+    color:  var(--secundary-color);
     font-size: 1rem;
     &:hover {
-      color: var(--primary-color);
-      text-shadow: 0.5px 0.5px 2px var(--primary-color);
+      color: var(--blueSoft-color);
+      text-shadow: 0.5px 0.5px 1px var(--secundary-color);
+      // font-weight: bold;
       cursor: pointer;
   }
   }
@@ -105,7 +112,8 @@
   .logOut{
     margin-right: 20px;
     &:hover{
-      color: var(--primary-color);
+      color: var(--blueSoft-color);
+      text-shadow: 0.5px 0.5px 1px var(--secundary-color);
       cursor: pointer;
     }
     // width: 18px;
