--- a/src/styles/pages/Register.scss
+++ b/src/styles/pages/Register.scss
@@ -4,6 +4,7 @@
   align-items: center;
   background-color: #f4f4f4;
   width: 100%;
+  min-height: 100vh;
 }
 
 .content {
@@ -28,7 +29,7 @@
 .form {
   display: flex;
   flex-direction: column;
-
+  align-items: center;
   p {
     font-size: 10px;
     color: #333;
@@ -52,7 +53,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 0.5rem;
-
+    width: 30%;
     .form-input {
       width: 100%;
       margin-bottom: 1rem;
@@ -76,19 +77,21 @@
     color: red;
     font-size: 0.875rem;
     margin-bottom: 1rem;
-    grid-column: span 2; // Hacer que el error ocupe dos columnas
+    grid-column: span 2; 
   }
 
   .submit-button {
     padding: 0.75rem;
     border: none;
-    background-color: var(--black-color);
+    background-color: var(--secundary-color);
     color: #fff;
     cursor: pointer;
     border-radius: 4px;
-    grid-column: span 2; // Hacer que el botón ocupe dos columnas
+    grid-column: span 2;
+    width: 30%;
     &:hover{
-      color: var(--primary-color);
+      // color: var(--primary-color);
+      background-color: var(--blueSoft-color);
     }
     &:disabled {
       background-color: #999;
@@ -104,6 +107,7 @@
 
     &:hover {
       text-decoration: underline;
+      color: var(--secundary-color);
     }
   }
 }
@@ -111,6 +115,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  
   // height: 60%;
 }
 .divLogoReg2{
