--- a/src/styles/components/_CreatePromoModal.scss
+++ b/src/styles/components/_CreatePromoModal.scss
@@ -29,6 +29,7 @@
 
         h2 {
             margin-top: 0;
+            color: #333; 
         }
 
         & form {
@@ -38,6 +39,7 @@
             label {
                 margin-bottom: 5px;
                 font-weight: bold;
+                color: #333; 
             }
 
             input[type="text"],
@@ -115,6 +117,21 @@
     display: flex;
     justify-content: space-between;
 }
+.desc_disp_fecha{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    & .fechaDiv{
+    width: 45%;
+    display: flex;
+    align-content: space-around;
+    align-items: flex-start;
+    flex-direction: column;
+        & label{
+            font-size: 0.9rem;
+        }
+    }
+}
 .image-preview {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -166,4 +183,23 @@
 }
 .inputImg{
     width: 30%;
+    display: none;
+}
+.nameCategory{
+    margin-left: 10px;
+    font-size: 0.9rem;
+}
+.titleCreate{
+    font-size: 1rem;
+    margin-right: 50px;
+    color: #333; 
+}
+.file-input{
+    &:hover{
+        cursor: pointer;
+    }
+}
+.title_img{
+    margin-top: 20px;
+    display: flex;
 }
