--- a/src/styles/pages/_AllPromotions.scss
+++ b/src/styles/pages/_AllPromotions.scss
@@ -127,6 +127,7 @@
     margin-top: 0;
     color: #f1f1f1;
     border-radius: 5px;
+    cursor: pointer;
     &:hover{
         background-color: var(--blueSoft-color);
     }
@@ -150,6 +151,8 @@
         height: 45px;
         width: 200px;
         background-color: var(--primary-color);
+        cursor: pointer;
+
         &:hover{
             background-color: var(--orangeSoft-color);
         }
