--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -51,4 +51,7 @@ p {
     align-items: center;
     display: flex;
     flex-direction: column;
+    @media (max-width: 500px) {
+        text-align: center;
+      }
 }
