--- a/src/styles/components/_CreatePromoModal.scss
+++ b/src/styles/components/_CreatePromoModal.scss
@@ -26,7 +26,16 @@
         box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
         display: flex;
         flex-direction: column;
-
+        .divHeader{
+            width: 100%;
+            margin-bottom: 30px;
+          }
+          .iconos {
+            position: absolute;
+            width: 50px;
+            margin-bottom: 20px;
+            align-self: center;
+          }
         h2 {
             margin-top: 0;
             color: #333; 
@@ -45,6 +54,7 @@
             input[type="text"],
             input[type="date"],
             input[type="number"],
+            select,
             textarea {
                 margin-bottom: 15px;
                 padding: 10px;
@@ -75,6 +85,15 @@
                 &:hover{
                     background-color: var(--blueSoft-color);
                 }
+            }
+            .btnInactive{
+                margin-top: 10px;
+                margin-right: 10px;
+                padding: 10px;
+                border: none;
+                border-radius: 4px;
+                background: #769cbd;
+                color: #fff;
             }
             .clsBtn{
                 margin-top: 10px;
@@ -203,3 +222,12 @@
     margin-top: 20px;
     display: flex;
 }
+
+  hr {
+    flex-grow: 1;
+    height: 1px;
+    background-color: #b9b9b961;
+    border: none;
+    margin-left: 10px;
+    margin-right: 0;
+  }
