--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -23,6 +23,9 @@
     justify-content: space-between;
     z-index: 0;
     transition: width 0.5s ease, opacity 0.2s ease-in;
+    @media (max-width: 480px) {
+      width: 40px;
+  }
   &.cont{
     display: flex;
     justify-content: center;
@@ -114,7 +117,10 @@
     &:hover{
         fill: var(--primary-color);      
     }
-    
+    @media (max-width: 480px) {
+      width: 20px;
+      margin-left: 15px;
+  }
   }
   .politicas{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
