--- a/src/styles/pages/UserProfile.scss
+++ b/src/styles/pages/UserProfile.scss
@@ -2,53 +2,126 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80%;
-  background-color: #f8f9fa;
-  width: 100%;
+  min-height: 100vh;
+  background-color: #f9f9f9;
 
   .profile-card {
-    display: flex;
-    flex-direction: column;
-    background: #fff;
+    background: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 80%;
+    width: 90%;
+    max-width: 800px;
     text-align: center;
-    
 
-    h1 {
-      margin-bottom: 20px;
-      font-size: 1.8em;
-      color: #343a40;
-    }
-    .profile-data{
+    .profile-data {
       display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-    }
-    .profile-image {
-      margin-bottom: 20px;
-
-      img {
-        border-radius: 50%;
+      flex-direction: column;
+      align-items: center;
+      .contImageP{
+        width: 15%;
+      .profile-image {
         width: 150px;
         height: 150px;
-        object-fit: cover;
-        border: 2px solid var(--blueSoft-color);
+        border-radius: 80%;
+        overflow: hidden;
+        margin-bottom: 20px;
+        
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
 
-    .profile-info {
-      text-align: left;
+      .profile-info {
+        width: 60%;
+        text-align: left;
 
-      p {
-        font-size: 1.1em;
-        margin: 10px 0;
-        color: #495057;
+        p {
+          margin: 10px 0;
+          font-size: 16px;
 
-        strong {
-          color: #343a40;
+          strong {
+            font-weight: 600;
+          }
+
+          input {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            font-size: 16px;
+          }
+        }
+      }
+    }
+.profile-infoEdit{
+  width: 100%;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .columnData{
+    display: flex;
+    flex-direction: column;
+    width: 47%;
+  } 
+  p {
+    margin: 10px 0;
+    font-size: 16px;
+
+    strong {
+      font-weight: 600;
+    }
+
+    input {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+      font-size: 16px;
+    }
+    select{
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+      font-size: 16px;
+    }
+}
+}
+    .edit-buttons {
+      display: flex;
+      justify-content: space-evenly;
+      margin-top: 20px;
+      width: 50%;
+      .save-button,
+      .cancel-button {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+
+      .save-button {
+        background-color: var(--primary-color);
+        color: #fff;
+        &:hover{
+          background-color: var(--orangeSoft-color);
+        }
+      }
+
+      .cancel-button {
+        background-color: #a6332a;
+        color: #fff;
+        &:hover{
+          background-color: #d03328;
         }
       }
     }
@@ -56,17 +129,71 @@
     .edit-button {
       margin-top: 20px;
       padding: 10px 20px;
-      font-size: 1em;
-      color: #fff;
       background-color: var(--secundary-color);
+      color: #fff;
       border: none;
       border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
-
-      &:hover {
+      &:hover{
         background-color: var(--blueSoft-color);
       }
     }
   }
+}
+.imgInfo{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  @media (max-width: 678px) {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.profile-imageEdit{
+  width: 150px;
+  height: 150px;
+  & label{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #5a5a5a;
+    border-radius: 50%;
+    z-index: 10;
+    // width: 150px;
+    // height: 150px;
+    & svg{
+      position: absolute;
+      top:50;
+      background-color: #5a5a5a82;
+    border-radius: 50%;
+    z-index: 10;
+    }
+  }
+
+  & img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+  & .file-input{
+    display: none;
+  }
+}
+.divUpdateimg{
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+   width: 150px;
+    height: 150px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    &:hover{
+      opacity: 1;
+   background-color: #5a5a5a56;
+    border-radius: 50%;   
+    }
+    
 }
