--- a/src/styles/pages/_userManagement.scss
+++ b/src/styles/pages/_userManagement.scss
@@ -1,29 +1,43 @@
 .user-management {
     min-height: 100vh;
-    width: 80%;
-    max-width: 100%;
+    width: 90%; // Ajusta el ancho para pantallas más pequeñas
     margin: 0 auto;
     padding: 20px;
     background-color: #ffffff;
     border-radius: 8px;
     font-family: 'Arial', sans-serif;
-    & .filters{
+
+    @media (max-width: 768px) {
+        width: 95%; // Ajusta el ancho para pantallas pequeñas
+    }
+
+    & .filters {
         display: flex;
+        flex-wrap: wrap; // Permite que los filtros se ajusten en pantallas pequeñas
         justify-content: space-between;
         margin-bottom: 15px;
-        align-items: self-start;
+        align-items: center; // Alinea verticalmente los elementos
     }
-    & .contBtn{
-        width: 100%;
-        display: flex;
-        margin-bottom: 10px;
-        justify-content: center;
+
+    & .inputFilter {
+        padding-left: 0.75em;
+        border: 1px solid #d9d9d9;
+        border-radius: 0.1875em;
+        width: 100%; // Ocupa el 100% del ancho en pantallas pequeñas
+        max-width: 250px; // Limita el ancho máximo en pantallas grandes
+        height: 2.5rem;
+        margin-top: 10px;
+        outline: none;
+        color: #333;
+        font-size: 0.9rem;
+        box-sizing: border-box;
     }
-    & .btnFilter{
+
+    & .btnFilter {
         cursor: pointer;
-        width: 10%;
+        width: 100%; // Ocupa el 100% del ancho en pantallas pequeñas
+        max-width: 150px; // Limita el ancho máximo en pantallas grandes
         background-color: var(--secundary-color);
-        // padding: 5px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -31,25 +45,13 @@
         color: #ffffff;
         box-shadow: 0px 4px 2px -3px rgba(0,0,0,0.75);
         border-radius: 10px;
-        &:hover{
+        margin-top: 10px;
+
+        &:hover {
             background-color: var(--blueSoft-color);
         }
     }
-    & .inputFilter{
-        padding-left:  .75em;
-        border: 1px solid #d9d9d9;
-        border-radius: .1875em;
-        width: 15%;
-        height: 2.5rem !important;
-        margin-top: 10px;
-        outline: none;
-        color: #333;
-        font-size: .9rem;
-        & option{
-            font-size: .9rem;
-            color: #333;
-        }
-    }
+
     h1 {
         font-size: 1.2rem;
         margin-bottom: 20px;
@@ -60,7 +62,10 @@
     ul {
         list-style-type: none;
         padding: 0;
-
+        @media (max-width:500px) {
+            padding-left: 15px;
+        }
+       
         li {
             background-color: #fff;
             border: 1px solid #ddd;
@@ -68,8 +73,8 @@
             margin-bottom: 10px;
             padding: 10px;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column; // Cambia la dirección para pantallas pequeñas
+            align-items: flex-start;
             transition: background-color 0.3s ease;
             cursor: pointer;
 
@@ -84,116 +89,145 @@
             .user-info {
                 display: flex;
                 align-items: center;
-                width: 70%;
+                width: 100%; // Asegura que ocupe todo el ancho disponible
+                margin-bottom: 10px;
+
                 .user-avatar {
                     width: 50px;
                     height: 50px;
                     border-radius: 50%;
                     overflow: hidden;
-                    // background-color: #ccc;
                     margin-right: 15px;
-                    & img{
+                    
+                    & img {
                         width: 100%;
+                        height: 100%;
+                        object-fit: cover;
                     }
                 }
 
                 .user-details {
                     .user-name {
-                        font-size: 1.2rem;
+                        font-size: 1rem;
                         font-weight: bold;
                         color: #555;
                     }
 
                     .user-email {
-                        font-size: 0.9rem;
+                        font-size: 0.8rem;
                         color: #777;
                     }
                 }
             }
 
             .user-roles {
-                font-size: 0.9rem;
+                font-size: 0.8rem;
                 color: #888;
-                width: 20%;
+                width: 100%; // Asegura que ocupe todo el ancho disponible
             }
         }
     }
 }
-.swal2-inputDate{
-    width: 62%;
+
+// Ajustes para los modales
+.swal2-inputDate {
+    width: 90%; // Ocupa el 100% del ancho disponible en pantallas pequeñas
     height: 2.5em;
     margin-top: 10px;
-    padding-left:  .75em;
+    padding-left: 0.75em;
     border: 1px solid #d9d9d9;
-    border-radius: .1875em;
+    border-radius: 0.1875em;
     outline: none;
     font-size: 1rem;
-        color: #888;
-    & option{
-        font-size: 1.2rem;
-        color: #555555;
-    }
+    color: #888;
 }
-.swal2-input{
-    width: 90% !important;
+
+.swal2-input {
+    width: 90% !important; // Ocupa el 100% del ancho disponible
     height: 2.5rem !important;
+    padding: 0.75em;
     margin-top: 10px;
+    @media (max-width:500px) {
+        padding: 0;
+        margin-left: 0;
+        margin-right: 0
+     }
 }
-.swal2-popup.swal2-modal.swal2-show{
-    width: 60%;
+
+.swal2-popup.swal2-modal.swal2-show {
+    width: 80%;
+    @media (max-width:500px) {
+        width: 90%;
+     }
 }
-.swal2-html-container{
+
+.status-role {
     display: flex;
-    justify-content: center;
-}
-.status-role{
-    display: flex;
-    flex-direction: row;
-    // width: 100%;
+    flex-wrap: wrap; // Permite que los elementos se ajusten en pantallas pequeñas
     margin-top: 10px;
-    align-self: center;
-    justify-content: space-evenly;
-    & .role{
+    justify-content: center; // Centra los elementos
+    width: 100%; // Ocupa el 100% del ancho disponible
+
+    & .role {
         display: flex;
-        align-items: flex-start;
         flex-direction: row;
-        width: 60%;
-        height: 2.5rem;
-        justify-content: space-between;
-        & .status{
+        width: 50%;
+        justify-content: space-around;
+        & .status {
             display: flex;
             align-items: center;
-            & label{
+            margin-bottom: 5px;
+
+            & label {
                 margin-left: 10px;
                 font-size: 0.9rem;
                 color: #888;
             }
         }
+        @media (max-width:500px) {
+           width: 100%;
+           flex-direction: column;
+        }
     }
-  
 }
-.btnRegister{
+.divbtnreg{
+    @media (max-width: 500px) {
+        width: 100%;
+       display: flex;
+       justify-content: center;
+    }
+}
+.btnRegister {
     cursor: pointer;
-    width: 15%;
+    width: 100%; // Ocupa el 100% del ancho en pantallas pequeñas
+    max-width: 200px; // Limita el ancho máximo en pantallas grandes
     background-color: var(--secundary-color);
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     height: 2.5rem;
     color: #ffffff;
-    box-shadow: 0px 4px 2px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 2px -4px rgba(0,0,0,0.75);
     border-radius: 10px;
-    &:hover{
+    margin-bottom: 20px;
+    &:hover {
         background-color: var(--blueSoft-color);
     }
-
+    @media (max-width: 768px) {
+        background-color: var(--primary-color);
+        max-width: 200px;
+        width: 60%;
+        align-self: center;
+    }
 }
-.swal2-actions{
-    & button{
+
+.swal2-actions {
+    & button {
         max-width: 150px;
         margin-top: 0;
     }
-    .swal2-cance{
+
+    .swal2-cance {
         display: flex;
     }
-    }
+}
