--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -5,6 +5,7 @@
     bottom: 0;
     width: 100%;
     font-size: 12px;
+    z-index: 1;
     // height: 80px;
     & p{
         color: var(--secundary-color)
