--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,11 +1,15 @@
 .sidebar-list{
   height: 100%;
     flex-direction: column;
-    margin-top: 50px;
+    
     width: 70px;
+
     &:hover{
       width: 100%;
     }
+    @media (max-width: 480px) {
+      margin-top: 100px;
+  }
 }
 .logOut {
     display: none;
@@ -25,6 +29,9 @@
     transition: width 0.5s ease, opacity 0.2s ease-in;
     @media (max-width: 480px) {
       width: 40px;
+      background-color: linear-gradient(to bottom, #e8e8e8c1, transparent);
+      height: 100%;
+      top: 0;
   }
   &.cont{
     display: flex;
