--- a/src/styles/pages/_userManagement.scss
+++ b/src/styles/pages/_userManagement.scss
@@ -135,7 +135,7 @@
 
 // Ajustes para los modales
 .swal2-inputDate {
-    width: 90%; // Ocupa el 100% del ancho disponible en pantallas pequeñas
+    width: 60%;
     height: 2.5em;
     margin-top: 10px;
     padding-left: 0.75em;
@@ -147,7 +147,7 @@
 }
 
 .swal2-input {
-    width: 90% !important; // Ocupa el 100% del ancho disponible
+    width: 60% !important; // Ocupa el 100% del ancho disponible
     height: 2.5rem !important;
     padding: 0.75em;
     margin-top: 10px;
