--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -13,10 +13,12 @@
     --secundary-color: #317ABB;
     --blueSoft-color: #318ad9;
     --blue-light-color: #64C9ED;
+    --secundaryInactive-color: #317bbb82;
     --grey-color: #e9e9e9;
     --black-color: #101010;
     --tertiary-color: #ECECEC;
-    
+    --red-color: rgb(181, 23, 23);
+    --redSoft-color: rgb(223, 26, 26);
     --orangeSoft-color: #fcb646;
     
     --balloon-border-radius: 5px;
