--- a/src/styles/components/_RegisterPartnerModal.scss
+++ b/src/styles/components/_RegisterPartnerModal.scss
@@ -10,6 +10,12 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
 
+& p{
+  font-size: small;
+  color: #5a6268;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
   &.open {
     visibility: visible;
     opacity: 1;
@@ -27,7 +33,7 @@
     padding: 20px;
     border-radius: 10px;
     width: 60%;
-    max-height: 80vh;
+    max-height: 85vh;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -76,11 +82,12 @@
           border: 1px solid #ccc;
           border-radius: 5px;
           font-size: 16px;
+          outline: none;
         }        
       }
     }
 
-    button {
+    .active {
       width: 30%;
       padding: 12px;
       margin-top: 10px;
@@ -93,6 +100,16 @@
       &:hover {
         background-color: var(--blueSoft-color);
       }
+    }
+    .inactive {
+      width: 30%;
+      padding: 12px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: var(--secundaryInactive-color);
+      color: #fff;
+      font-size: 16px;
     }
     .form-section3 {
       display: flex;
@@ -120,12 +137,20 @@
         }
       }
     }
-    button:last-of-type {
-      background-color: #6c757d;
+    .cancel {
+      width: 30%;
+      padding: 12px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+      color: #fff;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #5a6268;
 
       &:hover {
-        background-color: #5a6268;
-      }
+        background-color: #6c757d;
+              }
     }
   }
 }
@@ -170,4 +195,7 @@ hr {
   border: none;
   margin-left: 10px;
   margin-right: 0;
+}
+.swal2-popup.swal2-modal.swal2-show{
+  width: 40% !important;
 }
