--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -9,12 +9,15 @@
 
     //colors
     $primary-color: #F1AD3E;
-    --primary-color: #F1AD3E;
-    --secundary-color: #317ABB;
-    --blueSoft-color: #318ad9;
+    --primary-color: #007a8c;
+    --primarySoft-color: #acd0d5;
+    --secundary-color: #336749;
+    --grey-color: #f6f6f6;
+
+
+    --blueSoft-color: #008ba1;
     --blue-light-color: #64C9ED;
     --secundaryInactive-color: #317bbb82;
-    --grey-color: #e9e9e9;
     --black-color: #101010;
     --tertiary-color: #ECECEC;
     --red-color: rgb(181, 23, 23);
@@ -35,3 +38,8 @@
 //         mostaza: #d59831
 //         azul: #3179BB
 //         celeste: #64C9ED
+
+// verde: #007a8c rgb(0, 122, 140)
+// verde claro: #acd0d5 rgb(172, 208, 213)
+// verdeHoja: background: #336749 rgb(51, 103, 73)
+// gris: #f6f6f6 rgb(246, 246, 246)
