--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -6,13 +6,14 @@
     // overflow-y: auto;
 }
 .Container_layout{
-    overflow-y: auto;
-    display: flex;flex-direction: column;
+    // overflow-y: auto;
+    display: flex;
+    flex-direction: column;
     // height: 100vh;
     width: 100vw;
 }
 
 .childrenLayout{
     min-width: 100vw;
-    min-height: 100vh;
+    // min-height: 100vh;
 }
