--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: linear-gradient(45deg, #e9e9e9, #a3a3a3ce);
+    background: linear-gradient(45deg, var(--primary-color), var(--primarySoft-color));
     color: #fff;
     padding: 10px;
     bottom: 0;
@@ -8,7 +8,7 @@
     z-index: 1;
     // height: 80px;
     & p{
-        color: var(--secundary-color)
+        color: #fff
     }
 }
 
@@ -31,7 +31,7 @@ ul li {
     margin-bottom: 5px;
 }
 a {
-    color: var(--secundary-color);
+    color: #fff;
     text-decoration: none;
 }
 p {
@@ -47,7 +47,7 @@ p {
     font-size: 10px;
 }
 .footer-section2{
-    color: var(--secundary-color);
+    color: #fff;
     font-size: 10px;
     align-items: center;
     display: flex;
