--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -20,7 +20,7 @@
     width: 70px;
     align-items: flex-start;
     height: 100vh;
-    background-color: #e8e8e8c1;
+    background-color: var(--primary-color);
     transition: width 0.5s;
     overflow-x: hidden;
     flex-direction: column;
@@ -28,6 +28,7 @@
     z-index: 0;
     transition: width 0.5s ease, opacity 0.2s ease-in;
     @media (max-width: 480px) {
+      position: fixed;
       width: 40px;
       background-color: linear-gradient(to bottom, #e8e8e8c1, transparent);
       height: 100%;
@@ -80,14 +81,14 @@
         margin-left: 10px;
       padding: 20px 0;
       text-align: center;
-      color: var(--secundary-color);
+      color: #fff;
       cursor: pointer;
       @media (max-width: 568px) {
         margin-left: 0px;
         padding: 10px 0;
       }
       &:hover .sidebar-text {
-        color: var(--primary-color);
+        color: var(--primarySoft-color); 
       }
     }
   
@@ -96,7 +97,7 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       display:none ;
       margin-left: 10px;
-      color: var(--secundary-color);
+      color: var(--grey-color);
       opacity: 0;
       font-weight: 600;
       transition: color 0.3s ease-in;
@@ -129,7 +130,7 @@
     height: 25px;
     min-width: 20px;
     &:hover{
-        fill: var(--primary-color);      
+        fill: var(--primarySoft-color);      
     }
     @media (max-width: 480px) {
       width: 20px;
@@ -141,7 +142,7 @@
     font-size: 10px;
     display: none;
     // margin-left: 10px;
-    color: var(--secundary-color);
+    color: #fff;
     flex-direction: column;
     justify-content: center;
     margin-left: 10px;
@@ -165,7 +166,7 @@
         list-style-type: none;
         padding: 0;
         margin-left: 5px;
-        color:var(--secundary-color);;
+        color: #fff;
         text-align: center;
     }
     .divSalir{
