--- a/src/styles/pages/_AllPromotions.scss
+++ b/src/styles/pages/_AllPromotions.scss
@@ -1,9 +1,9 @@
 .promotions-list {
-    max-width: 90%;
-    margin: 0 auto;
+    height: 100vh;
+    margin-left: 5%;
     padding: 20px;
     background-color: #f9f9f9;
-    border-radius: 10px;
+    // border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
     h2 {
@@ -62,6 +62,9 @@
                 padding: 12px 15px;
                 text-align: left;
                 font-size: 1rem;
+                @media (max-width: 480px) {
+                    font-size: 0.8rem;
+                }
             }
         }
 
@@ -107,6 +110,9 @@
                 color: #e61a2f;
             }
         }
+    }
+    @media (max-width: 480px) {
+        height: 100%;
     }
 }
 
@@ -212,6 +218,7 @@
 @media (max-width: 480px) {
     .promotions-list {
         padding: 10px;
+        
     }
 
     h2 {
@@ -226,7 +233,7 @@
     .promotions-table {
         th, td, tr {
             padding: 8px;
-            font-size: 0.8rem;
+            font-size: 0.7rem;
         }
     }
 
@@ -246,6 +253,46 @@
     -webkit-overflow-scrolling: touch;  // Suaviza el scroll en dispositivos móviles
 
     .promotions-table {
-        min-width: 600px;  // Asegura que la tabla mantenga su estructura
+        min-width: 600px;
+        margin-left: 5px;
+    }
+}
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+
+    button {
+        background-color: #f1f1f1;
+        border: 1px solid #ccc;
+        padding: 8px 15px;
+        margin: 0 5px;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, color 0.3s ease;
+        font-size: 1rem;
+        color: #333;
+        outline: none;
+        @media (max-width: 480px) {
+            padding: 4px 8px;
+            border-radius: 5px;
+        }
+        &:hover {
+            background-color: #ddd;
+            color: #000;
+        }
+
+        &.active {
+            background-color: #007A8C;
+            color: #fff;
+            border: none;
+            pointer-events: none;
+        }
+
+        &:disabled {
+            background-color: #e9ecef;
+            color: #6c757d;
+            cursor: not-allowed;
+        }
     }
 }
