Creacion  de puntos turisticos

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -15,7 +15,7 @@
     --grey-color: #f6f6f6;
 
 
-    --blueSoft-color: #008ba1;
+    --greenSoft-color: #008ba1;
     --blue-light-color: #64C9ED;
     --secundaryInactive-color: #317bbb82;
     --black-color: #101010;
