--- a/src/styles/components/CardPartner.scss
+++ b/src/styles/components/CardPartner.scss
@@ -106,7 +106,7 @@
               background-color: var(--secundary-color);
               color: #fff;
               &:hover{
-            background-color: var(--blueSoft-color);
+            background-color: var(--greenSoft-color);
           }
         }
   
