--- a/src/styles/components/CreateBranchForm.scss
+++ b/src/styles/components/CreateBranchForm.scss
@@ -92,7 +92,7 @@
     cursor: pointer;
   
     &:hover {
-      background-color: var(--blueSoft-color);
+      background-color: var(--greenSoft-color);
     }
   }
   
