--- a/src/styles/pages/PartnerDetail.scss
+++ b/src/styles/pages/PartnerDetail.scss
@@ -198,7 +198,7 @@
       color: var(--secundary-color);
       &:hover{
         // background-color: var(--secundary-color);
-        color: var(--blueSoft-color);
+        color: var(--greenSoft-color);
       }
       // background-color: #333;
     }
