--- a/src/styles/pages/TouristPointDetail.scss
+++ b/src/styles/pages/TouristPointDetail.scss
@@ -22,7 +22,7 @@
             padding: 5px 15px;
             &:hover{
                 color:#fff;
-                background-color:  var(--blueSoft-color);
+                background-color:  var(--greenSoft-color);
             }
         }
         .btnDelete{
