--- a/src/styles/pages/UserProfile.scss
+++ b/src/styles/pages/UserProfile.scss
@@ -114,7 +114,7 @@
         background-color: var(--primary-color);
         color: #fff;
         &:hover{
-          background-color: var(--blueSoft-color);
+          background-color: var(--greenSoft-color);
         }
       }
 
@@ -137,7 +137,7 @@
       font-size: 16px;
       cursor: pointer;
       &:hover{
-        background-color: var(--blueSoft-color);
+        background-color: var(--greenSoft-color);
       }
     }
   }
