--- a/src/styles/components/_CreatePromoModal.scss
+++ b/src/styles/components/_CreatePromoModal.scss
@@ -83,7 +83,7 @@
                 color: #fff;
                 margin-right: 10px;
                 &:hover{
-                    background-color: var(--blueSoft-color);
+                    background-color: var(--greenSoft-color);
                 }
             }
             .btnInactive{
