--- a/src/styles/components/_RegisterPartnerModal.scss
+++ b/src/styles/components/_RegisterPartnerModal.scss
@@ -98,7 +98,7 @@
       font-size: 16px;
       cursor: pointer;
       &:hover {
-        background-color: var(--blueSoft-color);
+        background-color: var(--greenSoft-color);
       }
     }
     .inactive {
