--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -10,7 +10,7 @@
 }
 
 .loader {
-    color: var(--secundary-color);
+    color: #02cde8;
     font-size: 30px;
     text-indent: -9999em;
     overflow: hidden;
