--- a/src/styles/components/_navBar.scss
+++ b/src/styles/components/_navBar.scss
@@ -75,14 +75,14 @@
   }
   .route{
     color:  var(--grey-color);
-    font-size: 1.3rem;
+    font-size: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     &:hover {
-      color: var(--grey-color);
-      // text-shadow: 0.5px 0.5px 0.5px var(--blueSoft-color);
+      color: var(--primary-color);
+      // text-shadow: 0.5px 0.5px 0.5px var(--greenSoft-color);
       cursor: pointer;
   }
   }
@@ -120,7 +120,7 @@
   .logOut{
     margin-right: 20px;
     &:hover{
-      color: var(--blueSoft-color);
+      color: var(--greenSoft-color);
       text-shadow: 0.5px 0.5px 1px var(--secundary-color);
       cursor: pointer;
     }
