--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar-list{
   height: 100%;
     flex-direction: column;
-    
+    z-index: 1;
     width: 70px;
 
     &:hover{
@@ -93,7 +93,7 @@
     }
   
     .sidebar-text {
-      width: 150px;
+      width:200px;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       display:none ;
       margin-left: 10px;
@@ -104,7 +104,7 @@
       &.open {
         display: flex;
         opacity: 1;
-        
+        width: 200px;
         
       }
     }
@@ -116,6 +116,7 @@
     flex-direction: row;
     align-content: center;
     align-items: center;
+    width: 200px;
   }  
   
   .panelicono{
@@ -141,26 +142,32 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10px;
     display: none;
-    // margin-left: 10px;
     color: #fff;
     flex-direction: column;
     justify-content: center;
     margin-left: 10px;
     margin-bottom: 20px;
     align-items: center;
-    width: 150px; // Inicialmente con altura cero para ocultar el contenido
+    width: 150px;
     opacity: 0;
     text-align: center; 
    
 
     &.open {
-      // width: 200px;
+      width: 200px;
       display: flex;
       // Inicialmente transparente
       
         opacity: 1;
         transition: opacity 0.5s ease;
     }
+  }
+  .sidebar-textVersion{
+    list-style-type: none;
+        padding: 0;
+        margin-left: 5px;
+        color: #fff;
+        text-align: center;
   }
   .pyc{
         list-style-type: none;
