--- a/src/styles/pages/Dashboard.scss
+++ b/src/styles/pages/Dashboard.scss
@@ -2,7 +2,7 @@
     padding-left: 100px;
     padding-top: 50px;
     background-color: #f5f5f5;
-    height: 100%;
+    height: 100vh;
 }
 
 .dashboardTitle {
