--- a/src/styles/pages/_EditPromotionModal.scss
+++ b/src/styles/pages/_EditPromotionModal.scss
@@ -77,7 +77,7 @@
         color: #fff;
         margin-right: 10px;
         &:hover{
-            background-color: var(--blueSoft-color);
+            background-color: var(--greenSoft-color);
         }
     }
     .clsBtn{
